# simple-agent-lib

./: .gitignore  LICENSE  MANIFEST.in  QUICK_INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py
agent_lib/: __init__.py  logger_config.py  py.typed  schemas.py
docs/: examples.py
simple_agent_lib/: __init__.py  client.py  core.py  exceptions.py  logger_config.py  schemas.py  tools.py
tests/: test_context_consistency.py  test_context_edge_cases.py  test_installation.py  test_tool_call_with_text.py
